--- a/src/main/java/com/mycompany/matrix/Fmatcalc.form
+++ b/src/main/java/com/mycompany/matrix/Fmatcalc.form
@@ -62,7 +62,7 @@
               </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="30" y="170" width="150" height="50"/>
+                  <AbsoluteConstraints x="30" y="200" width="150" height="50"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -87,7 +87,7 @@
               </AuxValues>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="250" y="170" width="150" height="50"/>
+                  <AbsoluteConstraints x="250" y="200" width="150" height="50"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -96,11 +96,10 @@
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
                   <Connection code="new javax.swing.ImageIcon(&quot;C:\\Users\\EL-Hussein Store\\OneDrive\\Documents\\NetBeansProjects\\matrix\\src\\main\\java\\56371c2987f7a8739b7280567e205c94.jpg&quot;)" type="code"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="jLabel1"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="0" y="0" width="550" height="400"/>
+                  <AbsoluteConstraints x="0" y="0" width="550" height="470"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -162,17 +161,17 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jButton1" pref="62" max="32767" attributes="0"/>
+                          <Component id="jButton1" pref="84" max="32767" attributes="0"/>
                           <Component id="jButton2" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
-                      <Component id="jButton3" pref="76" max="32767" attributes="0"/>
+                      <Component id="jButton3" pref="88" max="32767" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
-                      <Component id="jButton4" pref="75" max="32767" attributes="0"/>
+                      <Component id="jButton4" pref="87" max="32767" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
-                      <Component id="createmat" pref="75" max="32767" attributes="0"/>
+                      <Component id="createmat" pref="87" max="32767" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
-                      <Component id="createmat1" pref="76" max="32767" attributes="0"/>
+                      <Component id="createmat1" pref="88" max="32767" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -343,7 +342,7 @@
                           <Component id="jButton11" alignment="3" min="-2" pref="63" max="-2" attributes="0"/>
                           <Component id="jButton12" alignment="3" min="-2" pref="63" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
